fix(reference-layout): add gap between toc + placement

--- a/components/reference-layout/server.css
+++ b/components/reference-layout/server.css
@@ -54,6 +54,7 @@
 
     grid-area: toc;
 
+    gap: 0.5rem;
     align-content: start;
     align-items: start;
     justify-content: space-between;
